# Torrent-Client

./: .gitignore  CMakeLists.txt  README.md  readme.md
include/core/: Block.hpp  HttpTracker.hpp  Piece.hpp  PieceStorage.hpp  TorrentClient.hpp  TorrentTask.hpp  TorrentTracker.hpp  UdpTracker.hpp
include/net/: Message.hpp  PeerConnect.hpp  PeerConnection.hpp  TcpConnect.hpp  TcpConnection.hpp  UdpConnection.hpp
include/ui/: TorrentUI.hpp  TorrentUi.hpp
include/utils/: BencodeParser.hpp  Timer.hpp  byte_tools.hpp
resources/: Parrot-home-7.0_amd64.iso.torrent  manjaro-xfce-25.0.10-minimal-251013-linux612.iso.torrent  pop-os_24.04_amd64_intel_20.iso.torrent  xubuntu-25.10-minimal-amd64.iso.torrent
src/: CMakeLists.txt  main.cpp  main_tui.cpp
src/core/: HttpTracker.cpp  Piece.cpp  PieceStorage.cpp  TorrentClient.cpp  TorrentFile.cpp  TorrentTask.cpp  TorrentTracker.cpp  UdpTracker.cpp
src/net/: Message.cpp  PeerConnect.cpp  PeerConnection.cpp  TcpConnect.cpp  TcpConnection.cpp  UdpClient.cpp  UdpConnection.cpp
src/ui/: TorrentUI.cpp  TorrentUi.cpp
src/utils/: BencodeParser.cpp  Timer.cpp  byte_tools.cpp
torrent-client-prototype/: CMakeLists.txt  bencode.cpp  bencode.h  byte_tools.cpp  byte_tools.h  main.cpp  message.cpp  peer_connect.cpp  peer_connect.h  piece.cpp  piece.h  piece_storage.cpp  piece_storage.h  tcp_connect.cpp  tcp_connect.h  torrent_file.cpp  torrent_tracker.cpp
